--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <input type="number" name="pages" id="pages"><br>
             <p>Read?</p>
             <input type="radio" id="yes" name="is-read" value="yes">
-            <label for="male">yes</label>
+            <label for="yes">yes</label>
             <input type="radio" id="no" name="is-read" value="no">
             <label for="no">no</label><br>
             <button type="button" class="submit">Submit</button>
